[package]
name = "ory-client"
version = "1.22.42"
authors = ["support@ory.sh"]
description = "OpenAPI API client for Ory Network, Ory's web-scale API for identity and access control."
license = "Apache-2.0"
edition = "2021"
[dependencies]
serde = { version = "^1.0", features = ["derive"] }
serde_with = { version = "^3.20", default-features = false, features = ["base64", "std", "macros"] }
serde_json = "^1.0"
serde_repr = "^0.1"
url = "^2.5"
uuid = { version = "^1.23", features = ["serde", "v4"] }
reqwest = { version = "^0.13", default-features = false, features = ["json", "multipart", "query", "form"] }
[features]
default = ["native-tls"]
native-tls = ["reqwest/native-tls"]